--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.2",
     "@angular/platform-browser-dynamic": "^15.0.2",
     "@angular/router": "^15.0.2",
+    "@microsoft/tsdoc": "^0.14.2",
     "rxjs": "^7.5.7",
     "tslib": "^2.4.1",
     "zone.js": "^0.12.0"
